# ma495-mathematical-modeling

./: .gitignore  CMakeLists.txt  main.cpp  old.cpp
data/: flupositive_national_2023-2024.csv  ilivists_indiana_2022-2023.csv
